src/objects/Vehicle__c/fields/Air_Conditioner__c.field-meta.xml
<CustomField>
        <fullName>Air_Conditioner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Air Conditioner</label>
        <type>Checkbox</type>
    </CustomField>