src/objects/Vehicle__c/fields/Awning__c.field-meta.xml
<CustomField>
        <fullName>Awning__c</fullName>
        <label>Awning</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Electric</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>