src/objects/Vehicle__c/fields/Bathroom_Hookup__c.field-meta.xml
<CustomField>
        <fullName>Bathroom_Hookup__c</fullName>
        <label>Bathroom Hookup</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Walk-In Shower</fullName>
                </value>
                <value>
                    <fullName>Tub/Shower Combo</fullName>
                </value>
                <value>
                    <fullName>No Shower</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>