src/objects/Vehicle__c/fields/Levelers__c.field-meta.xml
<CustomField>
        <fullName>Levelers__c</fullName>
        <label>Levelers</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Automatic</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>