src/objects/Vehicle__c/fields/Make__c.field-meta.xml
<CustomField>
        <fullName>Make__c</fullName>
        <label>Make</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>