src/objects/Vehicle__c/fields/Recommended_Passengers__c.field-meta.xml
<CustomField>
        <fullName>Recommended_Passengers__c</fullName>
        <label>Recommended Passengers</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>