src/objects/Vehicle__c/fields/Type__c.field-meta.xml
<CustomField>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Luxury</fullName>
                </value>
                <value>
                    <fullName>Mid-Range</fullName>
                </value>
                <value>
                    <fullName>Economy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>